--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,6 @@ spring:
         format_sql: false
     show-sql: false
     database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
